# autonomous-navigation-robot

./: .gitignore  README.md  commands.sh  commands.txt  tatus
src/custom_gazebo_world/: CMakeLists.txt  package.xml
src/custom_gazebo_world/launch/: custom_world.launch
src/custom_gazebo_world/maps/: hector_maze_map_final.yaml  maze_final.pgm  maze_final.yaml  my_karto_map.pgm  my_karto_map.yaml  rtab_maze_map.pgm  rtab_maze_map.yaml  turtlebot3_karto.pgm  turtlebot3_karto.yaml
src/custom_gazebo_world/worlds/: maze_world.world  maze_world_final.world
src/path_planning/: CMakeLists.txt  package.xml
src/path_planning/launch/: move_base.launch  turtlebot3_custom_world.launch
src/path_planning/param/: costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  global_planner_params.yaml  local_costmap_params.yaml
src/path_planning/rviz/: karto(DO NOT USE).rviz  maz_final.rviz  maze_fin_hector.rviz  maze_fin_karto.rviz  maze_kartos.rviz  rtab_maze_world.rviz
src/path_planning/scripts/: a_star.py  a_star_regular.py  path_planning.py
src/path_planning/scripts/algorithms/: neighbors.py
src/turtlebot3_model/: CMakeLists.txt  package.xml
src/turtlebot3_model/urdf/: turtlebot3_burger.urdf.xacro  turtlebot3_waffle.urdf.xacro  turtlebot3_waffle_pi.urdf.xacro
