<?xml version="1.0"?>
<package format="2">
  <name>custom_gazebo_world</name>
  <version>0.0.0</version>
  <description>Your custom Gazebo Simulation</description>

  <maintainer email="i.giorgi@kent.ac.uk">Ioanna Giorgi</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
