<?xml version="1.0"?>
<package format="2">
  <name>path_planning</name>
  <version>0.0.0</version>
  <description>The ROS path planning package</description>

  <maintainer email="i.giorgi@kent.ac.uk">Ioanna Giorgi</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
